# hlidskjalf.ai

./: .gitignore  CNAME  README.md  SETUP.md  index.html  setup.sh
nexus-control-plane/: .gitignore  Cargo.toml  idle_patterns.json  index.html  package-lock.json  package.json  stuck_patterns.json  tailwind.config.js
nexus-control-plane/crates/core/: Cargo.toml
nexus-control-plane/crates/core/src/: claude_session.rs  db.rs  events.rs  evidence.rs  github.rs  idle.rs  jsonl_types.rs  lib.rs  platform.rs  pty.rs  relay.rs  settings.rs  slack.rs  status.rs  stuck.rs  substrate.rs  tailscale.rs  types.rs  winddown.rs  workspace.rs
nexus-control-plane/crates/headless/: Cargo.toml
nexus-control-plane/crates/headless/src/: main.rs
nexus-control-plane/crates/tui/: Cargo.toml
nexus-control-plane/crates/tui/src/: app.rs  emitter.rs  input.rs  main.rs
nexus-control-plane/deploy/: standup-local.sh
nexus-control-plane/pwa/: build.mjs
nexus-control-plane/pwa/src/: api.js  app.css  app.js  board.js  gestures.js  inbox.js  index.html  manifest.json  state.js  sw.js  terminal.js  theme.js  utils.js  view-manager.js  wizard.js
nexus-control-plane/src/: App.tsx  index.css
nexus-control-plane/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
nexus-control-plane/src-tauri/capabilities/: default.json
nexus-control-plane/src-tauri/icons/: icon.icns
nexus-control-plane/src-tauri/resources/: nexus-statusline.cjs
nexus-control-plane/src-tauri/src/: db.rs  emitter.rs  github.rs  lib.rs  main.rs  pty.rs  tailscale.rs
nexus-control-plane/src-tauri/src/commands/: cards.rs  files.rs  git.rs  lanes.rs  mod.rs  nexuslink.rs  relay.rs  sessions.rs  settings.rs  wake.rs
nexus-control-plane/src-tauri/src/nexuslink/: mod.rs
nexus-control-plane/src/components/: AppShell.tsx  ClaudeStatusBadge.tsx  ContextBar.tsx  ContextMenu.tsx  CopyToWorkspaceModal.tsx  EditCardModal.tsx  ErrorBoundary.tsx  LaneEditor.tsx  MissionControl.tsx  NewSessionModal.tsx  NexusLinkPopover.tsx  RelayBadge.tsx  RepoPicker.tsx  ResizeDivider.tsx  TerminalWelcome.tsx  WakeToggle.tsx
nexus-control-plane/src/components/icons/: LaneIcon.tsx
nexus-control-plane/src/components/inbox/: InboxItem.tsx  InboxView.tsx
nexus-control-plane/src/components/preview/: MarkdownRenderer.tsx  PreviewPane.tsx
nexus-control-plane/src/components/sidebar/: FileBrowser.tsx  LaneSection.tsx  SessionItem.tsx  Sidebar.tsx  SidebarFooter.tsx  SidebarHeader.tsx  UsageBars.tsx
nexus-control-plane/src/store/: cards.ts  files.ts  inbox.ts  lanes.ts  nav.ts  preview.ts  relay.ts  sessions.ts  settings.ts  summaries.ts
nexus-control-plane/src/utils/: path.ts
nexus-control-plane/src/views/: SettingsView.tsx  TerminalArea.tsx  TerminalPanel.tsx
nexus-relay/: .gitignore  API.md  Cargo.toml
nexus-relay/relay-api/: Cargo.toml
nexus-relay/relay-api/src/: bootstrap.rs  config.rs  dashboard-org.html  dashboard.html  error.rs  lib.rs  main.rs  managed.rs  state.rs  telemetry.rs  visibility.rs
nexus-relay/relay-api/src/routes/: admin.rs  blobs.rs  channels.rs  groups.rs  health.rs  invites.rs  ledger.rs  mod.rs  namespaces.rs  pacts.rs  participants.rs  stats.rs
nexus-relay/relay-api/tests/: blobs_test.rs  channels_test.rs  groups_api_test.rs  groups_test.rs  health_test.rs  host_isolation_test.rs  ledger_test.rs  namespaces_test.rs  org_namespaces_test.rs  participants_test.rs  sqlite_concurrency_test.rs  sqlite_crud_test.rs  sqlite_ledger_test.rs  sqlite_outbox_test.rs  sqlite_search_test.rs
nexus-relay/relay-archive/: Cargo.toml
nexus-relay/relay-archive/src/: blob.rs  flush.rs  git.rs  jsonl.rs  lib.rs  main.rs  state.rs
nexus-relay/relay-archive/tests/: flush_state_test.rs  git_test.rs
nexus-relay/relay-auth/: Cargo.toml
nexus-relay/relay-auth/src/: middleware.rs  token.rs
nexus-relay/relay-client/: Cargo.toml
nexus-relay/relay-client/src/: error.rs  lib.rs  types.rs
nexus-relay/relay-client/tests/: blob_client_test.rs  client_test.rs
nexus-relay/relay-core/: Cargo.toml
nexus-relay/relay-core/src/: envelope.rs  error.rs  lib.rs  namespace.rs  participant.rs
nexus-relay/relay-db/: Cargo.toml
nexus-relay/relay-db/migrations/: 20260323000001_create_namespaces.sql  20260323000002_create_participants.sql  20260323000003_add_namespace_operator_fk.sql  20260323000004_create_ledger_entries.sql  20260323000005_create_root_tokens.sql  20260323000006_create_flush_state.sql  20260324000001_unique_key_prefixes.sql  20260324000002_add_participant_description.sql  20260327000001_fix_unique_constraint_for_reregistration.sql  20260331000001_create_channels.sql  20260331000002_relax_ledger_fk_for_channels.sql  20260422000001_add_last_active_at.sql  20260423000001_create_invite_tokens.sql  20260427000001_create_pacts.sql  20260523000001_add_namespace_type.sql  20260524000001_add_gateway_channel_id.sql  20260617000001_add_participant_role.sql  20260618000001_create_host_policy.sql  20260624000001_create_groups.sql
nexus-relay/relay-db/migrations-sqlite/: 20260323000001_create_namespaces.sql  20260323000002_create_participants.sql  20260323000003_add_namespace_operator_fk.sql  20260323000004_create_ledger_entries.sql  20260323000005_create_root_tokens.sql  20260323000006_create_flush_state.sql  20260327000001_fix_unique_constraint_for_reregistration.sql  20260331000001_create_channels.sql  20260331000002_relax_ledger_fk_for_channels.sql  20260414000001_add_sender_id_index.sql  20260422000001_add_last_active_at.sql  20260423000001_create_invite_tokens.sql  20260427000001_create_pacts.sql  20260523000001_add_namespace_type.sql  20260524000001_add_gateway_channel_id.sql  20260617000001_add_participant_role.sql  20260618000001_create_host_policy.sql  20260624000001_create_groups.sql
nexus-relay/relay-db/src/: channels.rs  connect.rs  groups.rs  host_policy.rs  invites.rs  ledger.rs  lib.rs  namespaces.rs  pacts.rs  participants.rs  root_tokens.rs  stats.rs
nexus-relay/relay-db/tests/: sqlite_migrate_test.rs
nexus-relay/relay-notify/: Cargo.toml
nexus-relay/relay-notify/src/: apns.rs  dispatch.rs  lib.rs  types.rs
(+16 files in other folders)
