[package]
name = "relay-archive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autotests = false

[lib]
name = "relay_archive"

[[bin]]
name = "relay-archive"
path = "src/main.rs"
required-features = ["backend-postgres"]

[features]
default = ["backend-postgres"]
backend-postgres = ["relay-db/backend-postgres", "sqlx/postgres"]
backend-sqlite = ["relay-db/backend-sqlite", "sqlx/sqlite"]

[dependencies]
relay-core = { path = "../relay-core" }
relay-db = { path = "../relay-db", default-features = false }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "flush_state_test"
required-features = ["backend-postgres"]

[[test]]
name = "git_test"
