[package]
name = "relay-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["backend-postgres"]
backend-postgres = ["relay-db/backend-postgres", "sqlx/postgres"]
backend-sqlite = ["relay-db/backend-sqlite", "sqlx/sqlite"]

[dependencies]
relay-core = { path = "../relay-core" }
relay-db = { path = "../relay-db", default-features = false }
argon2 = { workspace = true }
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
axum = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
