[package]
name = "relay-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
relay-core = { path = "../relay-core" }
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
relay-api = { path = "../relay-api" }
relay-archive = { path = "../relay-archive" }
relay-auth = { path = "../relay-auth" }
relay-db = { path = "../relay-db" }
serde_json = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tempfile = { workspace = true }
