[package]
name = "relay-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autotests = false

[features]
default = ["backend-postgres"]
backend-postgres = ["sqlx/postgres"]
backend-sqlite = ["sqlx/sqlite"]

[dependencies]
relay-core = { path = "../relay-core" }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "sqlite_migrate_test"
path = "tests/sqlite_migrate_test.rs"
required-features = ["backend-sqlite"]
