[package]
name = "relay-notify"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
relay-core = { path = "../relay-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = "0.31.0"
tracing-opentelemetry = "0.32.1"
